# blockchain-and-cryptocurrency-simulation

./: CMakeLists.txt  README.md
blockchain-and-cryptocurrency-simulation/: CMakeLists.txt  main.cpp
blockchain-and-cryptocurrency-simulation/includes/: Block.h  Blockchain.h  NetworkNode.h  ProofOfStake.h  ProofOfWork.h  Transaction.h
blockchain-and-cryptocurrency-simulation/src/: Block.cpp  Blockchain.cpp  NetworkNode.cpp  ProofOfStake.cpp  ProofOfWork.cpp  Transaction.cpp
